# ChangeLog for app-shells/zsh-syntax-highlighting
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  06 Nov 2011; Martin Väth <martin@mvath.de>
  Use default EGIT_PROJECT name. Call EGIT_REPACK unless offline.

  09 Sep 2011; Martin Väth <martin@mvath.de>
  Update addresses and port to git-2 eclass.
  Note that ESCM_OFLINE/EGIT_OFFLINE is named EVCS_OFFLINE in git-2.

  03 Jun 2011; Martin Väth <martin@mvath.de>
  Write ebuild from scratch.