@@ -1,0 +1,1 @@
+DIST zsh-syntax-highlighting-0.1.2.tar.gz 11472 SHA256 89d431f646a88ca68b5cc116fcf1e4f24075637bcbe51f1b1d225cf978aba849 SHA512 8f72570641ed10eea27f2c1fa8d2c7380153713fc94abb14dfa342f4755dec42b2ed8cec722c0f65682fd373b0274a7fa21c80cca04adce601990fdf545b7161 WHIRLPOOL 9c65de4fa58c64e9e5de7613d352c3a2aa61412b0c704e522ac6df9adb61e6a95d2c90540adbb45ce6f10dbe77435a560c622de4401e91cd5453306b0b008ea5
