@@ -1,19 +1,0 @@
-# ChangeLog for sys-fs/unionfs-fuse
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-  12 May 2012; Martin Väth <martin@mvath.de>
-  base->eutils
-
-  15 Apr 2012; Martin Väth <martin@mvath.de>
-  Inherit base
-
-  03 Feb 2012; Martin Väth <martin@mvath.de>
-  Bump to unionfs-fuse-0.25. Rename and re-keyword live ebuild appropriately.
-
-  03 Jan 2011; Martin Väth <martin@mvath.de>
-  Bump to EAPI=4.
-
-  20 May 2010; Martin Väth <martin@mvath.de>
-  Copy from the portage tree and make live version (until 0.25 is in tree).
-  Clear previous ChangeLog.
